tests/src/frontend/typechecking/invalid/mutable_constructor_frozen_arg.sk
mutable class C1(mutable value: Int)

mutable class C2(c1: mutable C1)

fun test(): void {
  myc1 = C1(99);
  _ = mutable C2(myc1);
}
